fixing text on index on mobile

--- a/style.css
+++ b/style.css
@@ -137,6 +137,10 @@ nav {
     width: 100%;
 }
 
+.hero-text {
+    padding: 0 2rem;
+}
+
 .date {
     font-size: 1.5rem;
     margin-top: 1rem;
@@ -388,6 +392,10 @@ footer {
         pointer-events: none;
         padding-top: 2rem;
         box-shadow: -2px 0 5px rgba(0,0,0,0.1);
+    }
+
+    .hero-text {
+        padding: 0 1.5rem;
     }
 
     .nav-links li {
